# dinero

./: .gitignore  LICENSE  README.md  Technology Review Presentation.pptx  environment.yml  pyproject.toml  req.txt  requirements.txt
.github/workflows/: build_test.yml
KPI/: README.md
backend/: kpi_manager.py  main.py  processing.py  sentiment_analysis.py  technical_indicators.py  transform.py  visualization.py
data/: AAPL.csv  GOOG.csv  MSFT.csv  MSFT.json
dinero/: app.py
dinero/backend/: app_functions.py  content_extraction.py  data_manager.py  kpi_manager.py  main.py  processing.py  req.py  sentiment_analysis.py  stock_data_manager.py  technical_indicators.py  transform.py  visualization.py
dinero/data/: AAPL.csv  AMD.csv  GOOG.csv  IBM.csv  MSFT.csv  NVDA.csv  TSLA.csv
dinero/frontend/: app.py  app_temp.py
dinero/tests/: test_app.py  test_backend.py  test_kpi.py  test_processing.py  test_req.py  test_sentiment_analysis.py  test_stock_data_manager.py  test_transform.py  test_visualization.py
dinero_venv/: pyvenv.cfg
dinero_venv/Scripts/: activate  activate.bat
docs/: component_design.md  component_design_navya.md  component_design_shivam.md  component_specification.md  functional _specification.md  kpi_component_design.md  milestones.md  navya-component-design.md  usecases.md  user_stories.md
examples/: README.md  tool_guide_for_user.md
streamlit-app/: app.py
